Lower `z-index` to avoid clash with Modal

--- a/packages/components/app/styles/components/flyout.scss
+++ b/packages/components/app/styles/components/flyout.scss
@@ -3,8 +3,11 @@
 //
 
 .hds-flyout {
-  z-index: 50;
+  z-index: 49; // modal component is 50; we want to make sure the flyout always stays below the modal, regardless the DOM order
   flex-direction: column;
+  height: 100vh;
+  max-height: 100vh;
+  margin: 0;
   padding: 0;
   background: var(--token-color-surface-primary);
   border: none;
@@ -13,9 +16,6 @@
   &[open] {
     position: fixed;
     display: flex;
-    height: 100vh;
-    max-height: 100vh;
-    margin: 0;
   }
 
   // we hide the native `::backdrop` pseudo-element in favor of using
